# insert-chapters

./: README.md  insert_chapters.py  pyproject.toml
src/insert_chapters/: __init__.py  cli.py  core.py
tests/: test_core.py
